--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,15 @@
-# Graph CLI generated artifacts
-build/
-generated/
-
-# Dependency directories
+.idea/
+.vscode/
 node_modules/
-jspm_packages/
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# dotenv environment variables file
+build/
+tmp/
+temp/
+coverage/
+.env.prod
+.env.dev
+.DS_Store
+/src/migrations/
 .env
-
-# Testing
-coverage
-coverage.json
-
-# Typechain
-typechain
-typechain-types
-
-# Hardhat files
-cache
+.eslintcache
+data
+generated
