--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,38 @@
-version: "3"
 services:
   graph-node:
     image: graphprotocol/graph-node
     ports:
-      - "8000:8000"
-      - "8001:8001"
-      - "8020:8020"
-      - "8030:8030"
-      - "8040:8040"
+      - '8000:8000'
+      - '8001:8001'
+      - '8020:8020'
+      - '8030:8030'
+      - '8040:8040'
     depends_on:
       - ipfs
       - postgres
-    extra_hosts:
-      - host.docker.internal:host-gateway
     environment:
       postgres_host: postgres
       postgres_user: graph-node
       postgres_pass: let-me-in
       postgres_db: graph-node
-      ipfs: "ipfs:5001"
-      ethereum: "mainnet:http://host.docker.internal:8545"
+      ipfs: 'ipfs:5001'
+      ethereum: 'mainnet:https://dmc-priv01.mydefichain.com/mainnet'
       GRAPH_LOG: info
   ipfs:
     image: ipfs/kubo:v0.17.0
     ports:
-      - "5001:5001"
+      - '5001:5001'
     volumes:
-      - ./data/ipfs:/data/ipfs
+      - ./data/ipfs:/data/ipfs:Z
   postgres:
-    image: postgres:14
+    image: postgres
     ports:
-      - "5432:5432"
+      - '5432:5432'
     command:
       [
         "postgres",
         "-cshared_preload_libraries=pg_stat_statements",
-        "-cmax_connections=200",
+        "-cmax_connections=200"
       ]
     environment:
       POSTGRES_USER: graph-node
@@ -47,4 +44,4 @@ services:
       PGDATA: "/var/lib/postgresql/data"
       POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql/data:Z
