--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "javsphere-testnet",
+  "name": "javsphere",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ javsphere-testnet",
-    "create-local": "graph create --node http://localhost:8020/ javsphere-testnet",
-    "remove-local": "graph remove --node http://localhost:8020/ javsphere-testnet",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 javsphere-testnet",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ javsphere",
+    "create-local": "graph create --node http://localhost:8020/ javsphere",
+    "remove-local": "graph remove --node http://localhost:8020/ javsphere",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 javsphere",
     "test": "graph test"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.77.0",
     "@graphprotocol/graph-ts": "0.32.0"
   },
-  "devDependencies": { "matchstick-as": "0.5.0" }
+  "devDependencies": {
+    "matchstick-as": "0.5.0"
+  }
 }
