--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -28,3 +28,27 @@ dataSources:
         - event: Unstake(indexed address,uint256,uint256)
           handler: handleUnstake
       file: ./src/jav-stakex.ts
+  - kind: ethereum
+    name: JavFreezer
+    network: mainnet
+    source:
+      address: '0x4e15D4225623D07Adb43e9D546E57E1E6097e869'
+      abi: JavFreezer
+      startBlock: 412902
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - FreezerLog
+      abis:
+        - name: JavFreezer
+          file: ./abis/JavFreezer.json
+      eventHandlers:
+        - event: ClaimUserReward(indexed address,uint256,indexed uint256,indexed uint256)
+          handler: handleClaim
+        - event: Deposit(indexed address,uint256,indexed uint256,indexed uint256,uint256,uint256)
+          handler: handleStake
+        - event: Withdraw(indexed address,uint256,indexed uint256,indexed uint256)
+          handler: handleUnstake
+      file: ./src/jav-freezer.ts
