--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "javsphere",
   "license": "UNLICENSED",
+  "version": "0.0.1",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
@@ -8,7 +9,13 @@
     "create-local": "graph create --node http://localhost:8020/ javsphere",
     "remove-local": "graph remove --node http://localhost:8020/ javsphere",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 javsphere",
-    "test": "graph test"
+    "test": "graph test",
+    "deploy-server": "graph deploy --node https://graph.octodefi.com/deploy --ipfs https://ipfs.octodefi.com/ javsphere",
+    "create-server": "graph create --node https://graph.octodefi.com/deploy javsphere",
+    "remove-server": "graph remove --node https://graph.octodefi.com/deploy javsphere",
+    "deploy-server-testnet": "graph deploy --node https://graph-testnet.octodefi.com/deploy --ipfs https://ipfs.octodefi.com/ javsphere",
+    "create-server-testnet": "graph create --node https://graph-testnet.octodefi.com/deploy javsphere",
+    "remove-server-testnet": "graph remove --node https://graph-testnet.octodefi.com/deploy javsphere"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.77.0",
