--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -5,6 +5,26 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
+    name: JavMarket
+    network: mainnet
+    source:
+      address: '0x32059D27563F96685911033B271a489b55c1aE58'
+      abi: JavMarket
+      startBlock: 358332
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - JavMarketLog
+      abis:
+        - name: JavMarket
+          file: ./abis/JavMarket.json
+      eventHandlers:
+        - event: OrderExecuted(indexed uint256,indexed address,uint256,uint256,string,uint8,bool,uint256,string,uint8)
+          handler: handleTrade
+      file: ./src/jav-market.ts
+  - kind: ethereum
     name: JavStakeX
     network: mainnet
     source:
