--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,45 @@
-.idea/
-.vscode/
-node_modules/
+# Graph CLI
 build/
-tmp/
-temp/
-coverage/
-.env.prod
-.env.dev
-.DS_Store
-/src/migrations/
-.env
+generated/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Matchstick files
+tests/.*
+matchstick
+.latest.json
+
+# Test coverage tools
+tests/.tools/
+
+# Dependency directories
+node_modules/
+
+# TypeScript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
 .eslintcache
-data
-generated
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variables file
+.env
+
+# IDE configiguration
+.idea
+.vscode
+
+# MacOS specific files
+.DS_Store
+/data
